<?xml version="1.0"?>
<package format="2">
  <name>ros_dashboard_backend</name>
  <version>0.0.0</version>
  <description>ROS Dashboard Backend Rest API</description>

  <maintainer email="farrelahmad75@gmail.com">Farrel Ahmad</maintainer>
  <license>All Rights Reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
